--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="dimiIndex.html"> <img
+        <a class="navbar-brand" href="index.html"> <img
                 src="https://bestanimations.com/Computers/funny-computer-animated-gif-29.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="">
             Dimitar Atanassov
